@@ -1173,6 +1173,7 @@ GM2-LIBS-ISO-MODS  = ChanConsts.mod    CharClass.mod   ClientSocket.mod \
                      ComplexMath.mod \
                      ConvStringReal.mod                ConvStringLong.mod \
                      ConvTypes.mod  \
+                     COROUTINES.mod \
                      EXCEPTIONS.mod    IOChan.mod      IOLink.mod \
                      IOConsts.mod      IOLink.mod      IOResult.mod \
                      LongComplexMath.mod \
